# Ninja-Wars

./: Cargo.toml  README.md
src/: components.rs  entities.rs  main.rs  presenters.rs  systems.rs
src/components/: attack.rs  attack_names.rs  ninja_names.rs  player_names.rs
src/entities/: ninja.rs  player.rs
src/presenters/: ninja_presenter.rs  player_presenter.rs  presenter.rs
src/systems/: combat_system.rs
